<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task1</string>
    <string name="exit">ex/truzu64Ubwb3m4u5UOQ==</string>
    <string name="DTitle">ndMnQLkT382L9tuHr1GSlw==</string>
    <string name="isexit">VBaEXmeCE/vB7x/S8myAEAEj0gTnU/YDoCcWkprCIis=</string>
    <string name="yes">FV47J/ozN+bcx+5uWQLEtg==</string>
    <string name="no">T8vMsDpFFhWbBZ9FlAwpfg==</string>
	<string name="user">t/uZHGguNAPDbOQPgaYIbQ==</string>
	<string name="password">lZhpjgkZpM3r8MTA4/jb5w==</string>
	<string name="register">U4eRmgwTDxcniJwCgg1nIA==</string>
	<string name="login">UVC42JqhXtRh6oILfN/RIA==</string>
	<string name="LTitle">GD2BiYqCmWC0HcXfUMZVt6160cRRKqoWb6vWry7T8mo=</string>
	<string name="forget">aQzpEgr/neHuPuo32mLwCw==</string>
	<string name="error">3gmdHzDBkk4z74xbObZJFKIll+q3RKMmT8pdn52v8p8=</string>
</resources>
