<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center">

	<EditText
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:lines="1"
		android:hint="@string/user"
		android:textSize="15dp"
		android:elevation="3dp"
		android:layout_marginBottom="10dp"
		android:layout_margin="10dp"
		android:id="@+id/loginEditText1"/>

	<EditText
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:ems="10"
		android:lines="1"
		android:hint="@string/password"
		android:textSize="15dp"
		android:inputType="textPassword"
		android:elevation="3dp"
		android:layout_marginBottom="10dp"
		android:layout_margin="10dp"
		android:textColor="#ff000000"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<Button
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/login"
			android:layout_marginBottom="10dp"
			android:onClick="login"
			android:textColor="#BBBBBB"
			android:layout_margin="10dp"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:text="@string/register"
			android:layout_marginLeft="10dp"
			android:textColor="#BBBBBB"
			android:onClick="Change"/>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal">

			<View
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"/>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				style="?android:attr/buttonBarButtonStyle"
				android:text="@string/forget"
				android:layout_marginRight="10dp"
				android:textColor="#BBBBBB"
				android:id="@+id/forget"/>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

